# northern-lights-forecast

./: .cookiecutter.json  .flake8  .gitignore  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  browser.py  config.ini.example  coverage.xml  crontab.sh  down.py  im_to_plt.py  image-analysis.py  image_analysis.py  img.py  mypy.ini  northern_lights.py  noxfile.py  pyproject.toml  requirements.txt  t.txt
.github/workflows/: constraints.txt  release.yml  tests.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  northern_lights.data.json  northern_lights.meta.json  posix.data.json  posix.meta.json  smtplib.data.json  smtplib.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  user.data.json  user.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.vim/: coc-settings.json
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/northern_lights_forecast/: __init__.py  __main__.py  browser.py  image_analysis.py  img.py  nlf_telegram_bot.py  northern_lights.py  notification.py  telegram-bot.py
src/northern_lights_forecast/savgol/: savitzky_golay.py
tests/: __init__.py  test_image_analysis.py  test_img.py  test_main.py  test_savgol_filter.py
