[tool.poetry]
name = "northern-lights-forecast"
version = "2.0.0"
description = "A simple web scraping northern lights forecast that automatically send a telegram notification during substorm events"
authors = ["Eirik Rolland Enger <eirroleng@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/engeir/northern-lights-forecast"
repository = "https://github.com/engeir/northern-lights-forecast"
documentation = "https://northern-lights-forecast.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
nlf = "northern_lights_forecast.__main__:main"

[tool.poetry.urls]
Changelog = "https://github.com/engeir/northern-lights-forecast/releases"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7.0"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
pytesseract = "^0.3.7"
wget = "^3.2"
matplotlib = "^3.5.1"
telegram-send = "^0.25"
scikit-image = "^0.18.3"
pyTelegramBotAPI = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.10.3"
mypy = "^0.931"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.2"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.11.1"
flake8 = "^4.0.1"
black = "^21.12b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^4.1.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.6.0"
Pygments = "^2.8.1"
codecov = "^2.1.12"
scipy = "^1.7.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["northern_lights_forecast"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
