[tool.poetry]
name = "northern-lights-forecast"
version = "4.1.0"
description = "A simple web scraping northern lights forecast that automatically send a telegram notification during substorm events"
authors = ["Eirik Rolland Enger <eirroleng@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/engeir/northern-lights-forecast"
repository = "https://github.com/engeir/northern-lights-forecast"
documentation = "https://northern-lights-forecast.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
nlf = "northern_lights_forecast.__main__:main"
nlfd = "northern_lights_forecast.nlf_telegram_bot:main"

[tool.poetry.urls]
Changelog = "https://github.com/engeir/northern-lights-forecast/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = ">=7,<9"
pytesseract = "^0.3.7"
telegram-send = "^0.25"
pyTelegramBotAPI = "^4.3.0"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
pid = "^3.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.3"}
safety = "^1.10.3"
mypy = "^0.941"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.4.0"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.20"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^3.0.1"
pre-commit-hooks = "^4.1.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^3.0.3"
Pygments = "^2.8.1"
codecov = "^2.1.12"
scipy = "^1.8.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["northern_lights_forecast"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
